k8s-deployment/ingress/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
      paths:
        - path:  /minio(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name:  minio-service.minio-dev
              port:
                number: 9000 # gakbisa ,
        - path: /nginx(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name:  nginx-project
              port:
                number: 80
